# ChangeLog for media-sound/exaile
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/exaile/ChangeLog,v 1.45 2008/05/29 17:15:05 hawking Exp $

  24 Nov 2008; Frédéric Lietart <thelinuxfr@free.fr>
  -exaile-20081023.ebuild, +exaile-20081121.ebuild:
  Upstream CVS

  24 Oct 2008; Frédéric Lietart <thelinuxfr@free.fr> ChangeLog:
  Version bump.

  29 May 2008; Ali Polatel <hawking@gentoo.org> exaile-0.2.13.ebuild:
  python_mod_optimize is ROOT aware.

  18 Apr 2008; Raúl Porcel <armin76@gentoo.org> exaile-0.2.13.ebuild:
  Add ~sparc

  12 Apr 2008; nixnut <nixnut@gentoo.org> exaile-0.2.13.ebuild:
  Stable on ppc wrt bug 216769

  11 Apr 2008; Markus Meier <maekke@gentoo.org> exaile-0.2.13.ebuild:
  x86 stable, bug #216769

  09 Apr 2008; Samuli Suominen <drac@gentoo.org> exaile-0.2.13.ebuild:
  amd64 stable wrt #216769

*exaile-0.2.13 (07 Apr 2008)

  07 Apr 2008; Samuli Suominen <drac@gentoo.org> +exaile-0.2.13.ebuild:
  Version bump.

  20 Feb 2008; Samuli Suominen <drac@gentoo.org> exaile-0.2.11.1.ebuild,
  exaile-0.2.12_beta.ebuild:
  elog that gst-plugins-gnomevfs provides streaming support by VQuickSilver.

*exaile-0.2.12_beta (16 Feb 2008)

  16 Feb 2008; Samuli Suominen <drac@gentoo.org> +exaile-0.2.12_beta.ebuild:
  Version bump.

  15 Feb 2008; Samuli Suominen <drac@gentoo.org> metadata.xml:
  Reassign to sound herd.

  22 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  exaile-0.2.11.1.ebuild:
  ppc stable, bug #202174

  15 Dec 2007; Samuli Suominen <drac@gentoo.org> exaile-0.2.11.1.ebuild:
  gst-plugins-jpeg is required for some podcasts.

  13 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
  exaile-0.2.11.1.ebuild:
  x86 stable

  13 Dec 2007; Samuli Suominen <drac@gentoo.org> exaile-0.2.11.1.ebuild:
  amd64 stable

*exaile-0.2.11.1 (13 Dec 2007)

  13 Dec 2007; Samuli Suominen <drac@gentoo.org>
  +files/exaile-0.2.11.1-libgtkembedmoz.patch, +exaile-0.2.11.1.ebuild: