@@ -1,6 +1,4 @@
-DIST exaile_0.2.14.tar.gz 1527168 RMD160 04919b4109a50e3e93d14492f3810694e6a07c4d SHA1 3442867ae6f5116f87eb2488da73cf6d23442f52 SHA256 04271a8040b18706a20312ecc911f4ffd2258272d04d8ba1eef36a3f301a074a
 DIST exaile_0.3.0_20081121.tar.gz 634474 RMD160 52bf8f9043d82f42035d5866e52c7d15f346a2a1 SHA1 e1f5b9fd9ccaa883cf3e0501f53a2d142afc028f SHA256 0d6cb3279aad6027794ee4c66e1b4e2f059fb574ac9db46897ce8e198b1a3fbb
-EBUILD exaile-0.2.14.ebuild 2847 RMD160 0210cfd74ea58cca196a7f541d4f7f0c4363761f SHA1 5bcb7b9329d545f582fc776c1f7cfd61b83ee783 SHA256 dc6ce8394ab27c18683d76104939000ff7e7456383e75d7149e10e6eed73fdbf
 EBUILD exaile-20081121.ebuild 2777 RMD160 7c41b0cecee8e000008067c9a7283f13221e37cc SHA1 232f91682e9235b1f63fc3d8be0a7b49dd4e4fb8 SHA256 ec7459cf4f2dd054015f9ec03b7fa5fd609e37947caeb20a7ba24a2980a0c370
-MISC ChangeLog 7206 RMD160 1515bdb3c9ff4e94a113ddcacbcd45a342e34a5f SHA1 dc1a240b358b61cda3d8ce9a9e2ccff146535005 SHA256 a09ff2f996480f8167cdeeaa961e4fa1f8a6337918cf7079d4014a3bb2d0b81f
+MISC ChangeLog 7314 RMD160 efd44e676ba0d9c8775517d120813d9703b2bb6a SHA1 e225f2e54d6516358ec5719e46284233af2e13c4 SHA256 d902a59938d3142a89fcbaef53c03550796163dffe2d95c6d20f08bb02c0e4ea
 MISC metadata.xml 291 RMD160 b5b2ec7f28c6a66b9c86ad2384f1326280d8f892 SHA1 4221388ceab853f1de18f4355c3a101ff863102e SHA256 efa2f5e2f30633a13318bac5f92f81fdebea4d8f4db1be14b48ff957f15fd037
