@@ -3,6 +3,10 @@
 # $Header: /var/cvsroot/gentoo-x86/media-sound/exaile/ChangeLog,v 1.45 2008/05/29 17:15:05 hawking Exp $
 
   24 Nov 2008; Frédéric Lietart <thelinuxfr@free.fr>
+  -exaile-0.2.14.ebuild:
+  exaile-0.2.14 in portage
+
+  24 Nov 2008; Frédéric Lietart <thelinuxfr@free.fr>
   -exaile-20081023.ebuild, +exaile-20081121.ebuild:
   Upstream CVS
 
